[gd_scene load_steps=22 format=2]

[ext_resource path="res://Sprites/player_jump.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/player_walk_1_3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/player_idle.png" type="Texture" id=4]
[ext_resource path="res://Sprites/player_death.png" type="Texture" id=5]
[ext_resource path="res://Sprites/player_crouch.png" type="Texture" id=6]
[ext_resource path="res://Sprites/player_walk_2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/player_walk_4.png" type="Texture" id=8]
[ext_resource path="res://SFX/double jump.mp3" type="AudioStream" id=9]
[ext_resource path="res://SFX/jump.mp3" type="AudioStream" id=10]
[ext_resource path="res://SFX/death.mp3" type="AudioStream" id=11]
[ext_resource path="res://SFX/shoot (fire).mp3" type="AudioStream" id=12]
[ext_resource path="res://SFX/shoot.mp3" type="AudioStream" id=13]
[ext_resource path="res://SFX/power up.mp3" type="AudioStream" id=14]
[ext_resource path="res://Sprites/player_crouch_walk_2.png" type="Texture" id=15]
[ext_resource path="res://Sprites/player_crouch_walk_4.png" type="Texture" id=16]
[ext_resource path="res://Sprites/player_crouch_walk_1_3.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "crouch",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 16 ) ],
"loop": true,
"name": "cwalk",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), null, ExtResource( 4 ), null ],
"loop": false,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 1 ), ExtResource( 1 ), ExtResource( 1 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 2.42403 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9.45161, 19.0321 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9.9956, 10.601 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 21.5223 )
shape = SubResource( 2 )
disabled = true

[node name="HurtBox" type="CollisionShape2D" parent="."]
position = Vector2( -1.32433, 5.2037 )
shape = SubResource( 3 )

[node name="HurtBoxSmall" type="CollisionShape2D" parent="."]
position = Vector2( -1.32433, 13.3282 )
shape = SubResource( 4 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 21.78, 3.641 )

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.05

[node name="Timer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_right = 3500
limit_bottom = 600
limit_smoothed = true
smoothing_enabled = true
editor_draw_limits = true

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="DoubleJump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="Fire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="PowerUp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )

[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
